# my-sync-ui

./: .gitignore  CLAUDE.md  firmware-structure.txt  package.json  structure.txt
firmware/: .gitignore  CMakeLists.txt  pico_sdk_import.cmake
firmware/blade/: CMakeLists.txt  blade_CMakeLists.txt
firmware/blade/include/app/: config.h  player.h  sk9822_pio.h
firmware/blade/pio/: sk9822_parallel.pio
firmware/blade/src/: main.c  player.c  sk9822_pio.c
firmware/build_local/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
firmware/build_local/blade/: Makefile  blade_fw.dis  blade_fw.elf  blade_fw.elf.map  blade_fw.hex  blade_fw.uf2  cmake_install.cmake  sk9822_parallel.pio.h
firmware/build_local/blade/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
firmware/build_local/common/: Makefile  cmake_install.cmake
firmware/build_local/fuselage/: Makefile  cmake_install.cmake
firmware/build_local/pico-sdk/: Makefile  cmake_install.cmake
firmware/build_local/pico-sdk/docs/: Makefile  cmake_install.cmake
firmware/build_local/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/build_local/pico-sdk/src/common/boot_picobin_headers/: Makefile  (+1 more)
firmware/build_local/pico-sdk/tools/: Makefile  cmake_install.cmake
firmware/build_local/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
firmware/build_local/tests/ir_bench/: Makefile  cmake_install.cmake
firmware/build_local/tests/segment_test/: Makefile  cmake_install.cmake
firmware/build_local/xbus_test/: Makefile  cmake_install.cmake
firmware/build_win/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
firmware/build_win/blade/: cmake_install.cmake
firmware/build_win/blade/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
firmware/build_win/common/: cmake_install.cmake
firmware/build_win/fuselage/: cmake_install.cmake
firmware/build_win/pico-sdk/: cmake_install.cmake
firmware/build_win/pico-sdk/docs/: cmake_install.cmake
firmware/build_win/pico-sdk/src/: cmake_install.cmake
firmware/build_win/pico-sdk/tools/: cmake_install.cmake
firmware/build_win/xbus_test/: cmake_install.cmake
firmware/build_xbus/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
firmware/build_xbus/blade/: blade_fw.dis  blade_fw.elf  blade_fw.elf.map  blade_fw.hex  blade_fw.uf2  cmake_install.cmake
firmware/build_xbus/blade/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
firmware/build_xbus/common/: cmake_install.cmake
firmware/build_xbus/fuselage/: cmake_install.cmake
firmware/build_xbus/pico-sdk/: cmake_install.cmake
firmware/build_xbus/pico-sdk/docs/: cmake_install.cmake
firmware/build_xbus/pico-sdk/src/: cmake_install.cmake
firmware/build_xbus/pico-sdk/tools/: cmake_install.cmake
firmware/build_xbus/xbus_test/: cmake_install.cmake  xbus_test_fw.dis  xbus_test_fw.elf  xbus_test_fw.elf.map  xbus_test_fw.hex  xbus_test_fw.uf2
firmware/common/: CMakeLists.txt
firmware/common/include/common/: flash_if.h  pins.h  proto.h  sk9822.h  slice.h
firmware/common/src/flash/: flash_if.c
firmware/common/src/proto/: proto.c
firmware/common/src/sk9822/: frame.c
firmware/common/src/slice/: scheduler.c
firmware/docs/: CONTEXT.md  HW_PINS.md  HW_PINS_BLADE.md  HW_PINS_FUSELAGE.md  PROTOCOL.md  SHOWFILE.md  TIMING.md
firmware/fuselage/: CMakeLists.txt
firmware/fuselage/include/app/: config.h  player.h  ws2812_driver.h
firmware/fuselage/src/: main.c  player.c  ws2812_driver.c
firmware/tests/blade_ir_sensor/: CMakeLists.txt  main.c
firmware/tests/blade_static_color/: CMakeLists.txt  main.c
firmware/tests/blade_sync_test/: CMakeLists.txt  main.c
firmware/tests/fuselage_hw_test/: CMakeLists.txt  main.c
firmware/tests/ir_bench/: CMakeLists.txt  main.c
firmware/tests/ir_only/: CMakeLists.txt  ir38k.pio  main.c
firmware/tests/pin_sniff/: CMakeLists.txt  main.c
firmware/tests/pwm_read/: CMakeLists.txt  main.c
firmware/tests/rainbow_strip/: CMakeLists.txt  main.c
firmware/tests/segment_test/: CMakeLists.txt  main.c
firmware/tests/xbus_test/: CMakeLists.txt  uart_rx.pio
firmware/tests/xbus_test/src/: main.c
firmware/xbus_test/: CMakeLists.txt
firmware/xbus_test/src/: main.c
(+440 files in other folders)
