cmake_minimum_required(VERSION 3.20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include(pico_sdk_import.cmake)
project(synchron-firmware C CXX ASM)
set(PICO_BOARD pico)
pico_sdk_init()

add_subdirectory(common)
add_subdirectory(blade)
add_subdirectory(fuselage)

add_subdirectory(tests/xbus_test)
add_subdirectory(tests/ir_bench)
add_subdirectory(tests/segment_test)
add_subdirectory(tests/pin_sniff)
add_subdirectory(tests/pwm_read)
add_subdirectory(tests/rainbow_strip)
add_subdirectory(tests/fuselage_hw_test)
add_subdirectory(tests/blade_ir_sensor)
add_subdirectory(tests/ir_only)
add_subdirectory(tests/blade_static_color)
add_subdirectory(tests/blade_sync_test)
